[tool.poetry]
name = "python-hyper-ben"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.scripts]
python-hyper-ben="python_hyper_ben.console:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/benros/python-hypr-ben"
repository = "https://github.com/benros/python-hypr-ben"
keywords = ["hypermodern"]
